# Medhack

./: .gitignore  CLAUDE.md  DATA.md  README.md  eda.py  features.py  main.py  model.py  predict.py  pyproject.toml  run_all.py  sample_submission.csv  train_model.py
models/: gb_baseline.joblib  lstm_patient_fusion.pt
notebooks/: create_lagged_features.ipynb  ensemble_stack_colab.ipynb  feature_engineering.ipynb  feature_engineering_v2.ipynb  light_gbm_tune.ipynb  lstm_baseline.ipynb  lstm_patient_fusion.ipynb  lstm_patient_fusion_colab.ipynb
notebooks/utils/: __init__.py  features.py  scoring.py  training.py
submissions/: gb_baseline_holdout_predictions.csv  lstm_baseline_holdout_predictions.csv  svm_baseline_holdout_predictions.csv
