[project]
name = "medhack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.5.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyarrow>=18.0.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.2.0",
]
