[project]
name = "medhack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.5.0",
    "ipykernel>=7.2.0",
    "lightgbm>=4.0.0",
    "jupyter>=1.1.1",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyarrow>=18.0.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.2.0",
    "optuna>=4.7.0",
    "optuna-integration>=4.7.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "fastparquet>=2024.2.0",
    "scipy>=1.11.0",
]

[tool.uv]
# Ensure resolution includes wheels for macOS Intel (torch 2.10+ drops x86_64 support)
required-environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]
